src/test/testFiles/valid/stackReturnRecursive.manimdsl
fun test(n: number): Stack<number> {
    if (n == 0) {
        let st = Stack<number>();
        return st;
    } else {
        let st = test(n-1);
        st.push(n);
        return st;

    }
}

let st = test(3);
st.push(5);